--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section>
         <h1>Comp4461 Project</h1>
 
-        <p><li><a style="font-size: 16px;" href="https://www.notion.so/Project-1-USTeam-49a50c2044ed49059d6eaaa4d662086d">Project I - If group project in campus can be more user-friendly</a></em></p>
+        <p><li><a style="font-size: 16px;" href="https://awesome-safflower-0a3.notion.site/Project-1-USTeam-4afab4a004e442abb4a69a96d3a7d0bc">Project I - If group project in campus can be more user-friendly</a></em></p>
         <p><li><a style="font-size: 16px;" href="http://github.github.com/github-flavored-markdown/sample_content.html">Project II - TBA</a></em></p>
         <p><li><a style="font-size: 16px;" href="http://github.github.com/github-flavored-markdown/sample_content.html">Project II - TBA</a></em></p>
 
