--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <h1>Comp4461 Project</h1>
 
         <p><li><a style="font-size: 16px;" href="https://awesome-safflower-0a3.notion.site/Project-1-USTeam-4afab4a004e442abb4a69a96d3a7d0bc">Project I - If group project in campus can be more user-friendly</a></em></p>
-        <p><li><a style="font-size: 16px;" href="http://github.github.com/github-flavored-markdown/sample_content.html">Project II - TBA</a></em></p>
-        <p><li><a style="font-size: 16px;" href="http://github.github.com/github-flavored-markdown/sample_content.html">Project II - TBA</a></em></p>
+        <p><li><a style="font-size: 16px;" href="https://www.notion.so/Project-2-DoSS-8425162040644435b56f60e07a33028d">Project II - DOSS</a></em></p>
+        <p><li><a style="font-size: 16px;" href="https://gabby-ceres-099.notion.site/Project-3-ARigami-8483e6b500c749d99fd76e39b830792f">Project III - ARigami</a></em></p>
 
       </section>
       <footer>
